finished files...lacking computer player

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 </head>
 <body>  
 <div>
-  <button id="btnNewGame">New Game</button>
+</div>
+<div>
+  Player 1 color: <input type="color" id="color1" value="#ff0000">
+  Player 2 color: <input type="color" id="color2" value="#0000ff">
+  <button id="btnNewGame"> New Game </button>
 </div>
 <div id="game">
   <table id="board"></table>
